--- a/package.json
+++ b/package.json
@@ -14,18 +14,26 @@
     "url": "git://github.com/JMPerez/spotify-web-api-js"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.5",
     "coveralls": "^3.0.2",
-    "eslint": "^5.5.0",
-    "jest": "^22.4.4",
-    "q": "^1.4.1",
-    "sinon": "^5.1.1"
+    "husky": "^1.1.2",
+    "jest": "^23.6.0",
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.8.0",
+    "ts-jest": "^23.10.4",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-consistent-codestyle": "^1.13.3",
+    "typescript": "^3.1.3"
   },
   "jest": {
     "verbose": true,
-    "testURL": "http://localhost/"
+    "testURL": "http://localhost/",
+    "preset": "ts-jest"
   },
   "scripts": {
-    "lint": "eslint src/*.js",
+    "lint": "tslint -c tslint.json src/**/*/ts",
+    "precommit": "pretty-quick --staged",
     "test": "npm run lint && jest --coverage",
     "travis": "npm test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
